@@ -1,21 +1,22 @@
-FROM debian:jessie
-# VNC doesn't start without xfonts-base
+FROM debian:buster-slim
+#REMOVED PACKAGES balance vim-tiny less wget ca-certificates xdotool telnet mtools 
 RUN sed -i 's/main/main contrib/g' /etc/apt/sources.list && \
     apt-get update && \
     apt-get -y -u dist-upgrade && \
     apt-get -y --no-install-recommends install dosbox tightvncserver xfonts-base \
-            lwm xterm vim-tiny less wget ca-certificates balance \
-            dosemu zip unzip pwgen xdotool telnet mtools nano && \
+            lwm xterm procps curl \
+            zip unzip nano pwgen && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 COPY startvnc.sh /usr/local/bin
-COPY dosboxconsole /usr/local/bin
-# COPY supervisor/ /etc/supervisor/conf.d/
-COPY setup.sh /
+
 COPY start.sh /usr/local/bin
+
+COPY stopcont.sh /usr/local/bin
+
+COPY setup.sh /
 RUN /setup.sh
 
-# Dosemu was just used to grab FreeDOS stuff.
-RUN dpkg --purge dosemu && apt-get -y --purge autoremove && rm /setup.sh
+RUN apt-get -y --purge autoremove && rm /setup.sh
 
 EXPOSE 5901
 ENTRYPOINT /usr/local/bin/start.sh
