@@ -1,3 +1,14 @@
+#2022-11-16
+- Moved to modern base FROM debian:buster-slim
+- Clean-up some non-needed packages
+- Improved dosbox.conf usage, now no need to restart container to update config, just restart dosbox
+- Added cycles=25000 to default dosbox.conf to limit CPU usage
+- reduced number of drives mounted to dosbox (c,d,y)
+- added autoexec.bat run from external volume /config/drive_d (D:) to launch DOS apps on container start
+- *DosBox auto-sleep* feature! set DOSBOXSLEEP=1 ENV VAR to enable DosBox sleep when VNC client disconnected and resume on VNC connect!
+- d:\start.bat in drive_d share can be used to launch DOS apps on container startup
+
+
 #2022-11-08
 - Added this file release_notes.txt
 - Fixed error restarting container by adding clean-up for /tmp files 
